--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
     	android:label="@string/app_name">
     	
         <activity 
-        	android:name=".BoxeeActivity"
+        	android:name="UiActivity"
             android:label="@string/app_name">
             
             <intent-filter>
@@ -20,7 +20,7 @@
             
         </activity>
         
-    	<activity android:name=".SettingsActivity" />
+    	<activity android:name="SettingsActivity" />
 		
     </application>
     
