--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
     	android:label="@string/app_name">
     	
         <activity 
-        	android:name="UiActivity"
+        	android:name=".RemoteUiActivity"
             android:label="@string/app_name">
             
             <intent-filter>
@@ -20,7 +20,7 @@
             
         </activity>
         
-    	<activity android:name="SettingsActivity" />
+    	<activity android:name=".SettingsActivity" />
 		
     </application>
     
@@ -31,7 +31,7 @@
           android:anyDensity="true" />
           <!-- http://d.android.com/guide/practices/screens_support.html read about legacy. -->
     
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="10"></uses-sdk>
+    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="10"></uses-sdk>
 	
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
