--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,10 +3,10 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.menny.android.boxeethumbremote"
     android:versionCode="2"
-    android:versionName="20110611-thumbs_up">
+    android:versionName="20110612-thumbs_up">
     
     <application 
-    	android:icon="@drawable/boxee48"
+    	android:icon="@drawable/app_icon"
     	android:label="@string/app_name">
     	
         <activity 
