--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.menny.android.boxeethumbremote"
     android:versionCode="2"
-    android:versionName="20110613-thumbs_up">
+    android:versionName="20110619-thumbs_up">
     
     <application 
     	android:icon="@drawable/app_icon"
@@ -19,6 +19,17 @@
             </intent-filter>
             
         </activity>
+        
+        <receiver android:name=".IncomingCallReceiver"> 
+                <intent-filter> 
+                    <action android:name="android.intent.action.PHONE_STATE"/>
+                </intent-filter> 
+        </receiver>
+        <receiver android:name=".NetworkTypeChangedReceiver"> 
+                <intent-filter> 
+                    <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                </intent-filter> 
+        </receiver>
         
     	<activity android:name=".SettingsActivity" />
 		
@@ -36,6 +47,6 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-	
-	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
 </manifest> 
