--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest 
 	xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.menny.android.boxeethumbremote"
-    android:versionCode="3"
-    android:versionName="20110622-thumbs_up">
+    package="com.menny.android.thumbremote"
+    android:versionCode="4"
+    android:versionName="20110624-thumbs_up">
     
     <application 
     	android:icon="@drawable/app_icon"
     	android:label="@string/app_name">
     	
         <activity 
-        	android:name=".RemoteUiActivity"
+        	android:name=".ui.RemoteUiActivity"
             android:label="@string/app_name" android:exported="true">
             
             <intent-filter>
@@ -20,20 +20,19 @@
             
         </activity>
         
-        <receiver android:name=".IncomingCallReceiver" android:exported="true"> 
+        <receiver android:name=".receiver.IncomingCallReceiver" android:exported="true"> 
                 <intent-filter> 
                     <action android:name="android.intent.action.PHONE_STATE"/>
                 </intent-filter> 
         </receiver>
-        <receiver android:name=".NetworkTypeChangedReceiver" android:exported="true"> 
+        <receiver android:name=".receiver.NetworkTypeChangedReceiver" android:exported="true"> 
                 <intent-filter> 
                     <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
                 </intent-filter> 
         </receiver>
         
-    	<activity android:name=".SettingsActivity" android:exported="false"/>
-		
-		<activity android:name=".HelpUiActivity" android:exported="false"/>
+    	<activity android:name=".ui.SettingsActivity" android:exported="false"/>
+    	<activity android:name=".ui.HelpUiActivity" android:exported="false"/>
     </application>
     
     <supports-screens
