--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,9 @@
     	android:icon="@drawable/app_icon"
     	android:label="@string/app_name">
     	
-        <activity 
+        <activity android:clearTaskOnLaunch="true"
+        	android:configChanges="orientation"
+        	android:launchMode="singleTask"
         	android:name=".ui.RemoteUiActivity"
             android:label="@string/app_name" android:exported="true">
             
@@ -31,8 +33,8 @@
                 </intent-filter> 
         </receiver>
         
-    	<activity android:name=".ui.SettingsActivity" android:exported="false"/>
-    	<activity android:name=".ui.HelpUiActivity" android:exported="false"/>
+    	<activity android:name=".ui.SettingsActivity" android:exported="false" android:excludeFromRecents="true" android:noHistory="true"/>
+    	<activity android:name=".ui.HelpUiActivity" android:exported="false" android:excludeFromRecents="true" android:noHistory="true"/>
     </application>
     
     <supports-screens
