--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionCode="5"
     android:versionName="20110628-thumbs_up">
     
-    <application 
+    <application android:name="com.menny.android.thumbremote.RemoteApplication"
     	android:icon="@drawable/app_icon"
     	android:label="@string/app_name">
     	
