--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,15 +2,14 @@
 <manifest 
 	xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.menny.android.thumbremote"
-    android:versionCode="7"
-    android:versionName="20110808-thumbs_up">
+    android:versionCode="8"
+    android:versionName="20110811-thumbs_up">
     
     <application android:name="com.menny.android.thumbremote.RemoteApplication"
     	android:icon="@drawable/app_icon"
     	android:label="@string/app_name">
     	
         <activity android:clearTaskOnLaunch="true"
-        	android:configChanges="orientation"
         	android:launchMode="singleTask"
         	android:name=".ui.RemoteUiActivity"
             android:label="@string/app_name" android:exported="true">
@@ -34,7 +33,7 @@
         </receiver>
         
     	<activity android:name=".ui.SettingsActivity" android:exported="false" android:excludeFromRecents="true" android:noHistory="true"/>
-    	<activity android:name=".ui.HelpUiActivity" android:exported="false" android:excludeFromRecents="true" android:noHistory="true"/>
+    	<activity android:name=".ui.HelpUiActivity" android:label="@string/welcome_to_remote" android:theme="@android:style/Theme.Dialog" android:exported="false" android:excludeFromRecents="true" android:noHistory="true"/>
     </application>
     
     <supports-screens
