--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest 
 	xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.menny.android.thumbremote"
+    package="net.evendanan.android.thumbremote"
     android:versionCode="11"
     android:versionName="20110912-thumbs_up">
     
-    <application android:name="com.menny.android.thumbremote.RemoteApplication"
+    <application android:name=".RemoteApplication"
     	android:icon="@drawable/app_icon"
     	android:label="@string/app_name">
     	
