--- a/project.properties
+++ b/project.properties
@@ -11,3 +11,7 @@
 split.density=false
 # Project target.
 target=android-10
+#proguard.config=proguard.cfg
+
+key.alias=boxee-remote
+key.store=key.store
