--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:clearTaskOnLaunch="true"
         	android:launchMode="singleTask"
         	android:name=".ui.RemoteUiActivity"
+        	android:theme="@android:style/Theme.NoTitleBar"
             android:label="@string/app_name" android:exported="true">
             
             <intent-filter>
