--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest 
 	xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.evendanan.android.thumbremote"
-    android:versionCode="22"
-    android:versionName="20120124-thumbs_up"
+    android:versionCode="23"
+    android:versionName="20120202-thumbs_up-dad-bday"
     android:installLocation="auto">
     
     <supports-screens
@@ -15,6 +15,14 @@
 		        <!-- http://d.android.com/guide/practices/screens_support.html read about legacy. -->
     
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="10"></uses-sdk>
+	
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<!-- required for wifilock -->
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
 		        
     <application android:name=".RemoteApplication"
     	android:icon="@drawable/app_icon"
@@ -38,12 +46,4 @@
     	
     	<service android:name="net.evendanan.android.thumbremote.service.ServerRemoteService"></service>
     </application>
-	
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-	<!-- required for wifilock -->
-	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-	<uses-permission android:name="android.permission.WAKE_LOCK"/>
 </manifest> 
