--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity android:clearTaskOnLaunch="true"
         	android:launchMode="singleTask"
         	android:name=".ui.RemoteUiActivity"
-        	android:theme="@android:style/Theme.NoTitleBar"
+        	android:theme="@style/AppTheme"
             android:label="@string/app_name" android:exported="true">
             
             <intent-filter>
